--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "predeploy": "npm run build index.html",
     "deploy": "gh-pages -d dist",
-    "start": "parcel index.html",
+    "start": "npx parcel index.html",
     "build": "parcel build index.html --public-url ./",
     "test": "Jest"
   },
@@ -31,6 +31,7 @@
   "dependencies": {
     "date-fns": "^4.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.15.1"
   }
 }
